# yt-xtract

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/yt_xtract/: __init__.py  __main__.py  cli.py  extractor.py  thumbnail.py  transcript.py
tests/: test_extractor.py  test_transcript.py
