[project]
name = "yt-xtract"
version = "0.1.0"
description = "Fetch transcripts and thumbnails from YouTube"
readme = "README.md"
authors = [
    { name = "Q-Hung", email = "nguyen.hung@smartly.io" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
]

[project.scripts]
yt-xtract = "yt_xtract.cli:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
